# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [Unreleased]
- added a CHANGELOG
- removed docker remains in NOTES.txt and setup.py

## [2.0.0] - 2018-05-27
#### Changed [BREAKING]
- Aggregated install and run commands under "cli" in preparation for additional cli commands; updated the documentation to match.

#### Fixed
- Cleaned up around the huckle specific help prompt logic which was incorrectly referencing a cli's help prompt.
- Fixed 2 empty parameters edge case