@@ -25,6 +25,8 @@ Note that an existing configuration file is left alone if the command is run mul
 for the same CLI.
 .IP "cli run <cliname>"
 Used to invoke a CLI by name, the details of which are otherwise left to API implementers.
+.IP "cli list"
+Lists all the installed CLIs.
 .IP "<cliname> ..."
 The <cliname> alias created for brevity, via huckle cli install.
 .IP "<cliname> ... help"
