@@ -44,6 +44,9 @@ def cli():
             else:
                 huckle_help()
 
+        elif sys.argv[1] == "cli" and sys.argv[2] == "list":
+            config.list_clis()
+
         elif sys.argv[1] == "help":
             hclinav.display_man_page(config.huckle_manpage_path)
             sys.exit(0)
