@@ -1,6 +1,6 @@
 from __future__ import absolute_import, division, print_function
 
-__version__ = "2.0.0"
+__version__ = "2.1.0"
 dependencies = ["restnavigator==1.0.1",
                 "requests[socks]==2.18.4",
                 "configparser==3.5.0",
