@@ -5,8 +5,12 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+#### Added
 - added a CHANGELOG
-- removed docker remains in NOTES.txt and setup.py
+- allow for listing of installed CLIs
+
+#### Removed
+- removed docker build remainders in NOTES.txt and setup.py
 
 ## [2.0.0] - 2018-05-27
 #### Changed [BREAKING]
